--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-project",
+  "name": "practice1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,15 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
-    "autoprefixer": "10.4.14",
+    "@mui/styled-engine-sc": "^5.12.0",
     "chart.js": "^4.3.0",
     "next": "13.4.4",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "styled-components": "^5.3.11"
   }
 }
