--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice1",
+  "name": "auth",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.3",
-    "@mui/styled-engine-sc": "^5.12.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "chart.js": "^4.3.0",
-    "next": "13.4.4",
+    "@mui/material": "^5.13.5",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^4.16.0",
+    "next": "^12.3.4",
+    "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.3",
+    "npm": "^9.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.1.1",
-    "styled-components": "^5.3.11"
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.6",
+    "prisma": "^4.16.0"
   }
 }
