--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
-    "@prisma/client": "^4.16.0",
+    "@prisma/client": "^4.16.1",
+    "bcrypt": "^5.1.0",
     "next": "^12.3.4",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "npm": "^9.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "8.43.0",
