--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
+    "@mui/material": "^5.13.6",
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^4.16.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "next": "^12.3.4",
+    "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "npm": "^9.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
+    "swr": "^2.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
