--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "chart.js": "^4.3.0",
     "next": "13.4.4",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.3",
     "react-redux": "^8.1.1",
     "styled-components": "^5.3.11"
   },
